kyverno-policies/mirantis-kyverno-policies/kyverno-privileged/good-pod-kyverno-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name:  privileged-good-pod
spec:
  hostNetwork: true
  hostPID: true 
  hostIPC: true
  securityContext:
    runAsUser: 1000
    fsGroup: 1001
    supplementalGroups: [2002]
  volumes:
  - name: config-vol
    hostPath: 
      path: /var/lib/docker/volumes/*certs
      type: Directory
  containers:
  - name: container01
    image: busybox
    command:
      - sleep
      - "3600"
    ports:
    - hostPort: 65515
    volumeMounts:
    - name: config-vol
      mountPath: /var/lib/docker/volumes/*certs
      readOnly: true
    securityContext:
      runAsNonRoot: false
      allowPrivilegeEscalation: true
      privileged: true
      capabilities:
        add:
          - KILL
          - MKNOD
          - SYS_CHROOT
          - SETUID
          - SETGID
          - NET_RAW 
      seLinuxOptions:
        level: "s0:c123,c456"
