kyverno-policies/mirantis-kyverno-policies/kyverno-privileged/kyverno-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: privileged
  annotations:
    policies.kyverno.io/title: privileged
    policies.kyverno.io/category: Visa-Custom
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.9.2
    kyverno.io/kubernetes-version: "1.23-1.26"
    policies.kyverno.io/description: >-
      Custom Policy for privileged access deployment at Visa
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: securityContext-hostlevelvalidation
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Policy for privileged Access.        
        pattern:
          spec:            
            =(hostNetwork): true
            =(hostIPC): true
            =(hostPID): true  
            securityContext:
              runAsUser: "*"
              fsGroup: "*"
              supplementalGroups: "*"  
            =(ephemeralContainers):          
              securityContext:
                allowPrivilegeEscalation: true
                privileged: true
                seLinuxOptions:
                  level: "?*"
              =(ports): 
               - =(hostPort): '0-65535'
            =(initContainers):          
              securityContext:
                allowPrivilegeEscalation: true
                privileged: true
                seLinuxOptions:
                  level: "?*"
              =(ports): 
               - =(hostPort): '0-65535'
            containers:          
            - securityContext:
                allowPrivilegeEscalation: true
                privileged: true
                seLinuxOptions:
                  level: "?*"          
              =(ports): 
               - =(hostPort): '0-65535'
    - name: host-ports-restriction
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort
          , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
          must either be unset or set between `0-65535`.          
        pattern:
          spec:
            =(ephemeralContainers):
              - =(ports):
                  - =(hostPort): "0-65535"
            =(initContainers):
              - =(ports):
                  - =(hostPort): "0-65535"
            containers:
              - =(ports):
                  - =(hostPort): "0-65535"
